# automated-security-helper-action

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  action.yml  pyproject.toml  requirements-dev.txt
.ash/: ash.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  release.yml  test.yml
examples/: getting-started.yml  local-testing.yml  pr-security-review.yml
scripts/: entrypoint.sh
src/: __init__.py
src/core/: __init__.py  config_parser.py  severity_filter.py
src/github/: __init__.py  pr_commenter.py  sarif_pr_commenter.py
src/utils/: __init__.py  sarif_enhancer.py
tests/: __init__.py  conftest.py  test-runner.sh
tests/fixtures/: __init__.py  sample_ash_results.json  sample_sarif.json
tests/integration/: __init__.py  test_action_workflow.py
tests/unit/: __init__.py  test_config_parser.py  test_pr_commenter.py  test_sarif_enhancement.py  test_sarif_pr_commenter.py  test_severity_filter.py
